Data for Stream 29 has been added

--- a/Codes/Stream 27 Issuing Books to Customers.ipynb
+++ b/Codes/Stream 27 Issuing Books to Customers.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "'/home/mrikum7/Telematics/PyDaViMa-2020/Codes'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,25 +93,34 @@
     "        sql = f\"update Books set CustomerId = {CustomerId} where BookId = {BookId}\"\n",
     "        self.execute(sql)\n",
     "    \n",
+    "    def totalBooks(self):\n",
+    "        sql = \"select count(*) from Books;\"\n",
+    "        return self.execute(sql).fetchall()[0][0]\n",
+    "    \n",
+    "    def totalCustomers(self):\n",
+    "        sql = \"select count(*) from Customer;\"\n",
+    "        return self.execute(sql).fetchall()[0][0]\n",
+    "     \n",
+    "\n",
     "obj = Library('Library.db')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[(1, 'A Brief History of Time', 'Stephen Hawking', 350, None),\n",
-       " (2, 'The Power of Now', 'Eckhart Tolle', 250, None),\n",
+       " (2, 'The Power of Now', 'Eckhart Tolle', 250, 3),\n",
        " (3, 'The Monk Who sold his Ferrari', 'Robin Sharma', 200, None),\n",
        " (4, 'Rich Dad Poor Dad', 'Robert Kiyosaki', 450, 5),\n",
        " (5, 'The Hound of Baskervilles', 'Arthur Conan Doyle', 300, None)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,29 +155,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OperationalError",
-     "evalue": "row value misused",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-dc3ea89f4547>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0missueBook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbookIdfromName\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Brief'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-25-53d446288c1d>\u001b[0m in \u001b[0;36missueBook\u001b[0;34m(self, BookId, CustomerId)\u001b[0m\n\u001b[1;32m     40\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0missueBook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mBookId\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mCustomerId\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m         \u001b[0msql\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mf\"update Books set CustomerId = {CustomerId} where BookId = {BookId}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msql\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0mobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLibrary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Library.db'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mOperationalError\u001b[0m: row value misused"
-     ]
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "obj.issueBook(obj.bookIdfromName('Brief')[0], 3)"
+    "obj.totalCustomers()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +187,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## What are aggregate functions and name them?\n",
+    "## What is the work of aggregate functions?"
+   ]
   }
  ],
  "metadata": {
